--- a/src/fxmls/GUI005CRUDF.fxml
+++ b/src/fxmls/GUI005CRUDF.fxml
@@ -3,6 +3,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
+<?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.TreeView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -13,18 +14,29 @@
   <children>
     <MenuBar VBox.vgrow="NEVER">
       <menus>
-        <Menu fx:id="mIncidents" mnemonicParsing="false" text="Incidents" />
-        <Menu fx:id="mFiles" mnemonicParsing="false" text="Files" />
-        <Menu fx:id="mUserInfo" mnemonicParsing="false" text="User Information" />
-            <Menu fx:id="mLogOut" mnemonicParsing="false" text="LogOut" />
+        <Menu fx:id="mIncidents" mnemonicParsing="false" text="Incidents">
+               <items>
+                  <MenuItem fx:id="mIIncidentList" mnemonicParsing="false" text="IncidentList" />
+               </items></Menu>
+        <Menu fx:id="mFiles" mnemonicParsing="false" text="Files">
+               <items>
+                  <MenuItem fx:id="mIFTP" mnemonicParsing="false" text="FTP" />
+               </items></Menu>
+        <Menu fx:id="mUserInfo" mnemonicParsing="false" text="User Information">
+               <items>
+                  <MenuItem fx:id="mISetting" mnemonicParsing="false" text="Settings" />
+               </items></Menu>
+        <Menu fx:id="mLogOut" mnemonicParsing="false" text="LogOut">
+               <items>
+                  <MenuItem fx:id="mILogOut" mnemonicParsing="false" text="LogOut" />
+               </items></Menu>
       </menus>
     </MenuBar>
       <BorderPane prefHeight="552.0" prefWidth="1024.0" VBox.vgrow="ALWAYS">
          <right>
             <AnchorPane prefWidth="157.0" BorderPane.alignment="CENTER">
                <children>
-                  <Button fx:id="btnMakeDirectory" layoutX="17.0" layoutY="45.0" mnemonicParsing="false" prefHeight="20.0" prefWidth="110.0" text="Make directory" AnchorPane.rightAnchor="30.0" />
-                  <Button fx:id="btnDelete" disable="true" layoutX="17.0" layoutY="80.0" mnemonicParsing="false" prefHeight="20.0" prefWidth="110.0" text="Delete" AnchorPane.rightAnchor="30.0" />
+                  <Button fx:id="btnDelete" disable="true" layoutX="17.0" layoutY="44.0" mnemonicParsing="false" prefHeight="20.0" prefWidth="110.0" text="Delete" AnchorPane.rightAnchor="30.0" />
                   <Button fx:id="btnDownload" disable="true" layoutX="17.0" layoutY="10.0" mnemonicParsing="false" prefHeight="20.0" prefWidth="110.0" text="Download file" AnchorPane.rightAnchor="30.0" />
                </children>
             </AnchorPane>
@@ -35,6 +47,8 @@
                   <TextField fx:id="txtFSearch" disable="true" editable="false" layoutX="25.0" layoutY="20.0" prefHeight="25.0" prefWidth="473.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="157.0" />
                   <Button fx:id="btnSearch" layoutX="510.0" layoutY="20.0" mnemonicParsing="false" prefHeight="20.0" prefWidth="110.0" text="Search file" AnchorPane.rightAnchor="30.0" />
                   <Button fx:id="btnLoad" disable="true" layoutX="510.0" layoutY="55.0" mnemonicParsing="false" prefHeight="20.0" prefWidth="110.0" text="Load file" AnchorPane.rightAnchor="30.0" />
+                  <TextField fx:id="txtFNameDirectory" layoutX="10.0" layoutY="50.0" prefHeight="25.0" prefWidth="208.0" promptText="Write the name of the directory..." />
+                  <Button fx:id="btnMakeDirectory" layoutX="231.0" layoutY="50.0" mnemonicParsing="false" prefHeight="20.0" prefWidth="110.0" text="Make directory" AnchorPane.rightAnchor="683.0" />
                </children>
             </AnchorPane>
          </top>
