--- a/src/fxmls/GUI005CRUDF.fxml
+++ b/src/fxmls/GUI005CRUDF.fxml
@@ -50,10 +50,10 @@
                   <Button fx:id="btnLoad" disable="true" layoutX="888.0" layoutY="87.0" mnemonicParsing="false" prefHeight="20.0" prefWidth="110.0" text="Upload file" AnchorPane.rightAnchor="26.0" />
                   <TextField fx:id="txtFNameDirectory" layoutX="14.0" layoutY="82.0" prefHeight="25.0" prefWidth="208.0" promptText="Write the name of the directory..." />
                   <Button fx:id="btnMakeDirectory" layoutX="235.0" layoutY="82.0" mnemonicParsing="false" prefHeight="20.0" prefWidth="110.0" text="Make directory" AnchorPane.rightAnchor="679.0" />
-                  <Label layoutX="14.0" layoutY="14.0" prefHeight="17.0" prefWidth="60.0" text="Servidor:" />
-                  <Label layoutX="390.0" layoutY="14.0" prefHeight="17.0" prefWidth="162.0" text="Directorio seleccionado:" />
-                  <TextField fx:id="txtFServer" layoutX="74.0" layoutY="10.0" prefHeight="25.0" prefWidth="284.0" />
-                  <TextField fx:id="txtFDirectory" layoutX="528.0" layoutY="10.0" prefHeight="25.0" prefWidth="344.0" />
+                  <Label layoutX="23.0" layoutY="14.0" prefHeight="17.0" prefWidth="45.0" text="Server:" />
+                  <Label layoutX="414.0" layoutY="14.0" prefHeight="17.0" prefWidth="110.0" text="Selected directory:" />
+                  <TextField fx:id="txtFServer" disable="true" editable="false" layoutX="74.0" layoutY="10.0" prefHeight="25.0" prefWidth="284.0" />
+                  <TextField fx:id="txtFDirectory" disable="true" editable="false" layoutX="528.0" layoutY="10.0" prefHeight="25.0" prefWidth="344.0" />
                </children>
             </AnchorPane>
          </top>
